--- a/submission_7/footballrefsrev.bib
+++ b/submission_7/footballrefsrev.bib
@@ -370,7 +370,8 @@ journal = {Policing and Society},
 keywords = {Alcohol,Football,Hooliganism,Regulation},
 pages = {150--166},
 title = {{'On the Lash' - revisiting the effectiveness of alcohol controls at football matches}},
-volume = {21:2},
+volume = {21},
+number = {2},
 year = {2011}
 }
 @article{Cleland2016,
